--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -61,10 +61,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\scripts\gameHandler.cs" />
+    <Compile Include="Assets\scripts\gameStateHandler.cs" />
     <Compile Include="Assets\scripts\HealthBar.cs" />
     <Compile Include="Assets\scripts\healthHandler.cs" />
     <Compile Include="Assets\scripts\moveScript.cs" />
     <Compile Include="Assets\scripts\p2Move.cs" />
+    <Compile Include="Assets\scripts\startTheGame.cs" />
     <Reference Include="Unity.TextMeshPro.Editor">
       <HintPath>C:/Users/Admin/Desktop/IMD4006 Games/IMD4006_AstroFu/Library/ScriptAssemblies/Unity.TextMeshPro.Editor.dll</HintPath>
     </Reference>
